# chip8-Emulater

./: .gitignore  CMakeLists.txt  README.md
include/: clock.hpp  cpu.hpp  display.hpp  display_sfml.hpp  load_instructions.hpp  memory.hpp  stack.hpp  utils.hpp
include/data/: font.hpp  instruction.hpp
include/hardware/: bus.hpp  clock.hpp  cpu.hpp  display.hpp  hardware.hpp  keypad.hpp  memory.hpp  stack.hpp
include/media/: sfml.hpp
include/utils/: load_instructions.hpp  utils.hpp
src/: clock.cpp  cpu.cpp  display.cpp  display_sfml.cpp  load_instructions.cpp  main.cpp  memory.cpp  stack.cpp  utils.cpp
src/hardware/: clock.cpp  cpu.cpp  display.cpp  keypad.cpp  memory.cpp  stack.cpp
tests/: CMakeLists.txt  cpu_test.cpp  main_test.cpp  memory_test.cpp  test_display.cpp
tests/.cache/clangd/index/: cpu_test.cpp.EBA84AC7FB42EE89.idx  gmock-actions.h.FD9EFB83C549D408.idx  gmock-all.cc.D112A608B59758A1.idx  gmock-cardinalities.cc.6F4EC583D70EEBFF.idx  gmock-cardinalities.h.0E6E5AF96BEED231.idx  gmock-function-mocker.h.1A655DBC573874A9.idx  gmock-generated-actions.h.996B3F681F88E554.idx  gmock-internal-utils.cc.CD6B12A4556B6F79.idx  gmock-internal-utils.h.BDB7439366F07177.idx  gmock-matchers.cc.226F630AC84E0C2B.idx  gmock-matchers.h.5B4B2B83B0651FFC.idx  gmock-matchers.h.E1628BEE89DF89A1.idx  gmock-more-actions.h.4963DC4CDDE907ED.idx  gmock-more-matchers.h.3731D5832D735144.idx  gmock-nice-strict.h.4416F8C8AB2BB82B.idx  gmock-port.h.127D2E395B100EDF.idx  gmock-port.h.8BEE8AC61AC6BE52.idx  gmock-pp.h.A73DBE02A0D1AA34.idx  gmock-spec-builders.cc.72C30AC9DAC77940.idx  gmock-spec-builders.h.575CD793E888E8DD.idx  gmock.cc.46DF6A279818751E.idx  gmock.h.3CA6D3C3D60A13A8.idx  gmock_main.cc.BB3D10E1319EE40D.idx  gtest-all.cc.5980615E5D759242.idx  gtest-assertion-result.cc.91F9C4510D4B7691.idx  gtest-assertion-result.h.51F19430AB6CF863.idx  gtest-death-test-internal.h.374024ABDC84C488.idx  gtest-death-test.cc.7CD66BD84696F9C8.idx  gtest-death-test.h.3545CC0DADB9D55C.idx  gtest-filepath.cc.C633B220667DCC04.idx  gtest-filepath.h.13D195EF49C248A6.idx  gtest-internal-inl.h.5060DDAD9FBC334A.idx  gtest-internal.h.9E0CF9B6060D1F07.idx  gtest-matchers.cc.34B2AE97563B18B5.idx  gtest-matchers.h.F67140BD1A39FDE8.idx  gtest-message.h.2DE1CE114991661B.idx  gtest-param-test.h.A93B73B8446E3EF5.idx  gtest-param-util.h.3BE12B5604ECD1EE.idx  gtest-port-arch.h.2685028B5399C7DA.idx  gtest-port.cc.375679A616143E5C.idx  (+21 more)
(+4 files in other folders)
